@@ -39,11 +39,11 @@ func (config *prospectorConfig) Validate() error {
 	}
 
 	if config.CleanInactive != 0 && config.IgnoreOlder == 0 {
-		return fmt.Errorf("ignore_older must be enabled when clean_older is used.")
+		return fmt.Errorf("ignore_older must be enabled when clean_inactive is used.")
 	}
 
 	if config.CleanInactive != 0 && config.CleanInactive <= config.IgnoreOlder+config.ScanFrequency {
-		return fmt.Errorf("clean_older must be > ignore_older + scan_frequency to make sure only files which are not monitored anymore are removed.")
+		return fmt.Errorf("clean_inactive must be > ignore_older + scan_frequency to make sure only files which are not monitored anymore are removed.")
 	}
 
 	return nil
